Attempting to get menu to resize correctly on mobile
- @gtrogers

--- a/app/assets/stylesheets/styles/layout.css
+++ b/app/assets/stylesheets/styles/layout.css
@@ -1,6 +1,6 @@
 /* remove GOV.UK default styles */
 .header-wrapper {
-    min-width: 480px;
+    width: auto;
 }
 
 header hgroup.dashboard {
